2007-01-17  Konstantin Triger <kostat@mainsoft.com>

	* GridView.cs: don't force creating rows collection when SelectedIndex
		changes; EnsureDatabound on select.

2007-01-17  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* TreeNode.cs: fixed Bind, fixed Value updating

2007-01-17  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DataList.cs: fixed OnBubbleEvent, added SelectedIndex updating

2007-01-17  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DetailsView.cs: fixed CreateChildControls, PageIndex cannot be less
	than zero

2007-01-15  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DetailsView.cs: fixed CreateChildControls, PageIndex should be less
	or equal to PageCount

2007-01-15 Igor Zelmanovich <igorz@mainsoft.com>

	* Menu.cs: added z-index attribute to popup div's.

2007-01-15 Ilya Kharmatsky  <ilya -at- decode-systems.com>

	* ListControl.cs
	* CheckBoxList.cs
	* ListBox.cs
	Implemented the protected net_2_0 method 'VerifyMultiSelect' with
	proper overloading in derived types.
 
2007-01-15  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* FileUpload.cs: fixed FileName property, should return filename
	without full path on client side

2007-01-15 Igor Zelmanovich <igorz@mainsoft.com>

	* TreeNode.cs
	considers INavigateUIData.NavigateUrl when bound.	

2007-01-15 Igor Zelmanovich <igorz@mainsoft.com>

	* CompleteWizardStep.cs
	* CreateUserWizard.cs
	* CreateUserWizardStep.cs
	* TemplatedWizardStep.cs
	* Wizard.cs
	make the design complied to .NET	
	build all possible controls at once and manage render by Visible property

2007-01-14 Eyal Alaluf <eyala@mainsoft.com>
	* Button.cs, HyperLink.cs, DataGrid.cs, ImageButton.cs, LinkButton.cs,
	  PagedDataSource.cs: Added J2EE Portal support for TARGET_J2EE.

2007-01-14  Ilya Kharmatsky <ilyak-at-mainsoft.com>
	* BaseCompareValidator
	* CompareValidator
	Added support for CultureInvariantValues property, which should be 
	counted in new 2.0 methods such as - Compare, Convert etc. The code