@@ -1,3 +1,9 @@
+2007-01-17  Vladimir Krasnov  <vladimirk@mainsoft.com>
+
+	* TreeView.cs: fixed RegisterStyle, style names should be without
+	leading underscore. fixed RenderNode, node icons should be taken also
+	from level styles
+
 2007-01-17  Konstantin Triger <kostat@mainsoft.com>
 
 	* GridView.cs: don't force creating rows collection when SelectedIndex
